#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(partty, 0.3.0, fr _at_ syuki.skr.jp)
AM_INIT_AUTOMAKE(partty, 0.3.0)
AC_CONFIG_SRCDIR(src/partty.h)
AC_CONFIG_HEADER(config.h)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.
#AC_CHECK_LIB(z,compress,,AC_MSG_ERROR(Test for libz failed.))

AC_CHECK_HEADERS(pty.h,have_pty_h=1)
if test "$have_pty_h" = 1; then
	AC_CHECK_LIB(util,openpty)
else
	AC_CHECK_HEADERS(util.h)
fi

AC_ARG_WITH([shell],
	    AS_HELP_STRING([--with-shell=shell],
			   [path to fallback shell if SHELL environment variable is not available [[/bin/sh]]]),
	    [with_shell=$withval], [with_shell=/bin/sh])

if test -z "$with_shell" ; then
	with_shell=/bin/sh
fi
AC_DEFINE_UNQUOTED([FALLBACK_SHELL], ["$with_shell"], [fallback shell if SHELL environment variable is not available])

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([arpa/inet.h fcntl.h limits.h netdb.h netinet/in.h stddef.h stdint.h stdlib.h string.h sys/ioctl.h sys/socket.h sys/time.h termios.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_HEADER_TIME
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_FORK
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_REALLOC
AC_FUNC_SELECT_ARGTYPES
AC_CHECK_FUNCS([dup2 getpass gettimeofday memmove memset select socket strchr strrchr])

AC_CONFIG_FILES([Makefile
		 src/Makefile
		 partty.spec])
AC_OUTPUT
