AC_INIT(src/captty.h)
AC_CONFIG_AUX_DIR(ac)
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE(captty, 0.3.4)
AC_CONFIG_HEADER(config.h)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.
AC_CHECK_LIB(z,compress,,
             AC_MSG_ERROR([Can't find libz library.]))

AC_CHECK_HEADERS(pty.h,have_pty_h=1)  # Mac OS X
AC_CHECK_HEADERS(libutil.h,have_pty_h=1)  # FreeBSD
if test "$have_pty_h" = 1; then
	AC_CHECK_LIB(util,openpty)
else
	AC_CHECK_HEADERS(util.h)  # Linux
fi

AC_OUTPUT([Makefile
           src/Makefile])

